--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Setup package.json
         run: npm install
 
+      - name: Run API server
+        run: npm run serve:prod
+
       - name: Build
         run: hugo
 
